--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,3 +58,23 @@ a {
   /* margin: 0 auto;
   padding: 10px 0; */
 }
+
+*::-webkit-scrollbar {
+  width: 6px;
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  width: 4px;
+  background-color: #9ea8a8;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #6b7272;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #a4e0e0;
+}
+
